rendered to update citations, fixed fao, un-who, froehlich, o'connor in-text citations

--- a/data-layers/data-layer-descriptions.qmd
+++ b/data-layers/data-layer-descriptions.qmd
@@ -193,7 +193,7 @@ small-scale fisheries sector?
 ## Artisanal fisheries sustainability 
 #### [ao_sust](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/ao_sust.csv) {-} 
 
-These data are used to estimate the sustainability of artisanal fishing practices. Artisanal and subsistence fishing scores were calculated from [Sea Around Us](https://www.seaaroundus.org/) catch data [@pauly2020] and the RAM Legacy Database [http://ramlegacy.org/](http://ramlegacy.org/) [@ramlegacystockassessmentdatabase2023]. For this layer, nearly identical methods were used as in the fisheries sub-goal calculations. Instead of producing scores for all global fish stocks, we only produced scores for catch that is denoted as artisanal and subsistence catch in the Sea Around Us catch data.
+These data are used to estimate the sustainability of artisanal fishing practices. Artisanal and subsistence fishing scores were calculated from [Sea Around Us](https://www.seaaroundus.org/) catch data [@pauly2020] and the RAM Legacy Database [http://ramlegacy.org/](http://ramlegacy.org/) [@ramlegacystockassessmentdatabase2024]. For this layer, nearly identical methods were used as in the fisheries sub-goal calculations. Instead of producing scores for all global fish stocks, we only produced scores for catch that is denoted as artisanal and subsistence catch in the Sea Around Us catch data.
 
 #### Units {-} 
  scaled 0-1
@@ -217,7 +217,7 @@ These data incorporate regional IUCN assessment information when possible (i.e.,
 
 See Species goal for calculations.
 
-These are the trend data for the species subgoal. These data describe changes in species condition within each region based on historical changes in risk status from IUCN Red List of Threatened Species [http://www.iucnredlist.org/](http://www.iucnredlist.org/)) [[@iucn2022 ; @iucn_spatial_2022; @birdlifeinternationalandhandbookofthebirdsoftheworld2020].
+These are the trend data for the species subgoal. These data describe changes in species condition within each region based on historical changes in risk status from IUCN Red List of Threatened Species [http://www.iucnredlist.org/](http://www.iucnredlist.org/)) [[@iucn2024 ; @iucn_spatial_2024; @birdlifeinternationalandhandbookofthebirdsoftheworld2020].
 
 #### Units {-} 
  trend score
@@ -226,7 +226,7 @@ These are the trend data for the species subgoal. These data describe changes in
 #### [fis_b_bmsy](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/fis_b_bmsy.csv) {-} 
 
 Status of global fish stocks based on B/Bmsy values (the ratio of population biomass compared to the biomass required to deliver maximum sustainable yield).  We preferentially used B/Bmsy estimates from formal stock assessments from the  
-RAM Legacy Database [http://ramlegacy.org/](http://ramlegacy.org/) [@ramlegacystockassessmentdatabase2023]. We assigned the stocks to OHI and FAO regions using Free [-@free2017mapping] spatial data describing the range of each stock. When a stock was missing the most recent years of data, carried over the most recent year after 2010 to estimate the missing years. 
+RAM Legacy Database [http://ramlegacy.org/](http://ramlegacy.org/) [@ramlegacystockassessmentdatabase2024]. We assigned the stocks to OHI and FAO regions using Free [-@free2017mapping] spatial data describing the range of each stock. When a stock was missing the most recent years of data, carried over the most recent year after 2010 to estimate the missing years. 
 
 
 When RAM data were unavailable, we use the data-limited catch-MSY model [@martell2016simple] to estimate B/Bmsy values using yearly fish catch reconstruction data. For the catch-MSY model, we defined a stock as a species caught within an FAO major fishing area (www.fao.org/fishery/area/search/en). This definition of a stock eliminated all taxa not identified to species level. This approach assumes that stocks are defined by FAO region, which we know is often not true because multiple stocks of the same species can exist within an FAO region and some stocks cover multiple FAO regions. However, this assumption is necessary without range maps of stocks. The catch data were summed for each species/FAO region/year, and the catch-MSY model was applied to each stock and FAO region to estimate B/Bmsy.
@@ -406,7 +406,7 @@ Kelp | 1
 
 *Subcategory: habitat destruction*
 
-The total tonnes of coral harvest were determined for each region using export data from the FAO Global Commodities database [@un-fao2023]. The tonnes of ornamental fishing was divided by the area of coral, taken from the hab_coral layer, to get the intensity of coral harvest per region. Following this, we set the reference value as the 95th quantile of coral harvest intensity. We then divided the intensity by the reference intensity. Anything that scored above 1 received a intensity pressure score of 1. To incorporate the health of the coral, we then multiplied the intensity pressure score by the health of the coral, to get the final pressure score.
+The total tonnes of coral harvest were determined for each region using export data from the FAO Global Commodities database [@un-fao2024]. The tonnes of ornamental fishing was divided by the area of coral, taken from the hab_coral layer, to get the intensity of coral harvest per region. Following this, we set the reference value as the 95th quantile of coral harvest intensity. We then divided the intensity by the reference intensity. Anything that scored above 1 received a intensity pressure score of 1. To incorporate the health of the coral, we then multiplied the intensity pressure score by the health of the coral, to get the final pressure score.
 
 #### Units {-} 
  scaled 0-1
@@ -491,7 +491,7 @@ Revenue data for commercial fishing were obtained from FAO’s FishStat database
 Data on revenues from marine aquaculture were derived from FAO’s FishStat database, which includes country-level data on total production values for marine, brackish, and freshwater species beginning in 1984 and updated yearly. To isolate production values attributable to marine and brackish aquaculture, data pertaining to freshwater species were omitted. This species classification process was very time consuming as each species had to be queried individually per year. There was little year-to year variation, and thus data were extracted in 5 year increments, providing data for 1997, 2002 and 2007.
 
 #### Marine mammal watching
-IFAW provides country-level data on total expenditures (including direct and indirect) attributable to the whale watching industry (O'Connor et al. 2009). Here, total expenditures are used as a close proxy for total revenue. We used total expenditure data (direct and indirect expenditures) to avoid using a literature derived multiplier effect. When IFAW reported “minimal” revenue from whale watching, we converted this description to a 0 for lack of additional information. For countries with both marine and freshwater cetacean viewing, we adjusted by the proportion of marine revenue as described for the jobs dataset.
+IFAW provides country-level data on total expenditures (including direct and indirect) attributable to the whale watching industry [@oconnor2009whale]. Here, total expenditures are used as a close proxy for total revenue. We used total expenditure data (direct and indirect expenditures) to avoid using a literature derived multiplier effect. When IFAW reported “minimal” revenue from whale watching, we converted this description to a 0 for lack of additional information. For countries with both marine and freshwater cetacean viewing, we adjusted by the proportion of marine revenue as described for the jobs dataset.
 
 #### Marine renewable energy
 The United Nations Energy Statistics Database provides production data, in kilowatt-hours (KWh), for tidal and wave electricity. However, only two countries, France and Canada, have high enough levels of production to be reported in this data source. For Canada, production data were replaced with production data (Gross Megawatt hours per year from 1995-2010) provided directly from the Annapolis tidal power plant because the plant provided a longer time series (Ruth Thorbourne, personal communication, Aug 9, 2011). To convert production data into revenue, production values were multiplied by average yearly prices of electricity per KWh specific to Canada and France, provided by the US Energy Information Administration ([http://www.eia.gov/emeu/international/elecprii.html](http://www.eia.gov/emeu/international/elecprii.html); updated June 2010) after conversion to 2010 USD. Some of the production data could not be used because there were no available electricity price data to convert production into revenue, truncating our time series.
@@ -523,7 +523,7 @@ Exposure is the log transformed intensity of harvest calculated as tonnes of har
 ## Fish oil and fish meal score 
 #### [np_fofm_scores](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/np_fofm_scores.csv) {-} 
 
-Fish oil and fish meal scores from [Sea Around Us catch data](http://www.seaaroundus.org/) [@pauly2020] and the RAM Legacy Database [http://ramlegacy.org/](http://ramlegacy.org/). For this layer, nearly identical methods were used as in the fisheries sub-goal calculations. Instead of producing scores for all global fish stocks, we only produced scores for those that contribute to fish oil and fish meal (Froehlich 2018). The tonnes of harvest of these species were multiplied by 0.7 to reflect the proportion of this catch used for oil or feed. 
+Fish oil and fish meal scores from [Sea Around Us catch data](http://www.seaaroundus.org/) [@pauly2020] and the RAM Legacy Database [http://ramlegacy.org/](http://ramlegacy.org/). For this layer, nearly identical methods were used as in the fisheries sub-goal calculations. Instead of producing scores for all global fish stocks, we only produced scores for those that contribute to fish oil and fish meal [@froehlich2020avoiding]. The tonnes of harvest of these species were multiplied by 0.7 to reflect the proportion of this catch used for oil or feed. 
  
 #### Units {-} 
  scaled 0-1
@@ -553,7 +553,7 @@ To weight the relative contributions of fisheries and mariculture to the food pr
 
 *Subcategory: nonindigenous species*
 
-This layer represents the potential for harmful genetic escapement based on whether the species being cultured is native or introduced. Data come from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations [@2023]. Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch (SFW) Aquaculture Recommendations contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). The escapes criteria was used for this layer, where a score of 1 is the lowest, and a score of 10 is the highest. The scores reflect the potential impact of genetic escapes on local biodiversity, if these species were to escape. Genetic ‘pollution’ can arise when larvae, spats or seeds escape from poorly managed hatcheries, making native species vulnerable to outbreeding depressions and/or genetic bottlenecks. All country average scores were then rescaled from 0 to 1 using the maximum possible raw SFW score of 10 and minimum of 1.
+This layer represents the potential for harmful genetic escapement based on whether the species being cultured is native or introduced. Data come from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations [@2023monterey]. Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch (SFW) Aquaculture Recommendations contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). The escapes criteria was used for this layer, where a score of 1 is the lowest, and a score of 10 is the highest. The scores reflect the potential impact of genetic escapes on local biodiversity, if these species were to escape. Genetic ‘pollution’ can arise when larvae, spats or seeds escape from poorly managed hatcheries, making native species vulnerable to outbreeding depressions and/or genetic bottlenecks. All country average scores were then rescaled from 0 to 1 using the maximum possible raw SFW score of 10 and minimum of 1.
 
 These scores are country and species-specific, however, many country/species combinations are not assessed by SeaFood Watch. Given that each mariculture record must have a corresponding escapes score we used a series of steps to estimate escapes scores for every country and species. If a country/species match was available we used that, otherwise, we gapfilled using the following sequence:
 
@@ -950,7 +950,7 @@ Data are from the United Nations Food and Agriculture Organization (FAO) Fisheri
 We used the FAO Global Number of Fishers dataset (see commercial fishing above for full description) to estimate jobs for mariculture. For this sector, we used data in the aquatic-life cultivation category. Again, employment is disaggregated into full-time, part-time, occasional, and unspecified statuses and we implement a weighting scheme where full time = 1 job, part-time = 0.6, occasional = 0.15, and unspecified = 0.5. Aquatic-life cultivation includes marine, brackish and freshwater aquaculture. In order to estimate the proportion of total aquaculture jobs that can be attributed to marine and brackish aquaculture, we used country-specific proportions of marine and brackish aquaculture revenues (compared to total revenues) calculated from FAO aquaculture production data, assuming that numbers of jobs approximately scale with production in terms of revenue. For country-years with no data for the proportion of marine/brackish production because of gaps in the FAO production data, we used the proportion from the most recent year for which data were available. For countries without proportion estimates from any years, we used the average proportion from the country’s geographic region (e.g., Caribbean, Polynesia, Eastern Asia), with the exception of American Samoa, for which we used the proportion value from Guam.
 
 #### Marine mammal watching
-The International Fund for Animal Welfare’s (IFAW) Whale Division provides time series data on whale watching in more than 115 coastal countries (O'Connor et al 2009). This dataset may be an imperfect representation of all marine mammal watching due to its focus on whales, although it does include data for other types of marine mammal watching (e.g., dolphins). However, to our knowledge, it is the most complete dataset pertaining to the global marine mammal watching industry. We obtained regional averages of the number of whale watchers per employee, as well as the number of whale watchers in each country. Using this information, we estimated the number of whale watching jobs in each country by dividing the country’s total number of whale watchers by the average number of whale watchers per employee for that country’s region (e.g., Africa & Middle East, Europe, North America). It is important to note that data are not annual, but there are at least four years of data for each country.
+The International Fund for Animal Welfare’s (IFAW) Whale Division provides time series data on whale watching in more than 115 coastal countries [@oconnor2009whale]. This dataset may be an imperfect representation of all marine mammal watching due to its focus on whales, although it does include data for other types of marine mammal watching (e.g., dolphins). However, to our knowledge, it is the most complete dataset pertaining to the global marine mammal watching industry. We obtained regional averages of the number of whale watchers per employee, as well as the number of whale watchers in each country. Using this information, we estimated the number of whale watching jobs in each country by dividing the country’s total number of whale watchers by the average number of whale watchers per employee for that country’s region (e.g., Africa & Middle East, Europe, North America). It is important to note that data are not annual, but there are at least four years of data for each country.
 When IFAW reported “minimal” numbers of whale watchers, we converted this description to a 0 for lack of additional information. Because some of the whale watching in O’Connor et al. focused on freshwater cetacean viewing, we categorized the target species listed for each country as freshwater or marine. For countries with both marine and freshwater species, we categorized the whale watching in those countries as either 50% or 90% marine, based on the number of marine versus freshwater target species and information provided in the report narrative. For Colombia and Indonesia, more detailed information in the report narrative allowed for a more precise determination of the percentage of marine-based whale watching. We applied these marine proportions to data on the number of whale watchers before converting these estimates into employment estimates.
 
 #### Marine renewable energy
@@ -1184,7 +1184,7 @@ f) Improving sewage and other waste treatment
 ## Mariculture harvest 
 #### [mar_harvest_tonnes](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/mar_harvest_tonnes.csv) {-} 
 
-Mariculture production is calculated from the FAO Global Aquaculture Production Quantity dataset [@unitednations2023a]. Only production classified in the "Marine" and "Brackishwater" environments were included in the analysis (all "Freshwater" production was excluded). Marine species that are not consumed as food were excluded. Non-edible seaweeds were excluded because they are included in the natural products goal. Seaweeds that are partially consumed as food were weighted with a value between 0 and 1 that represents the proportion of the yield used as food. All species produced within a country were summed to give a single production value for each country in each year that production took place. For the three EEZs that fall within the China region (China, Macau, and Hong Kong), we combined the values by summing across these EEZs.
+Mariculture production is calculated from the FAO Global Aquaculture Production Quantity dataset [@unitednations2024a]. Only production classified in the "Marine" and "Brackishwater" environments were included in the analysis (all "Freshwater" production was excluded). Marine species that are not consumed as food were excluded. Non-edible seaweeds were excluded because they are included in the natural products goal. Seaweeds that are partially consumed as food were weighted with a value between 0 and 1 that represents the proportion of the yield used as food. All species produced within a country were summed to give a single production value for each country in each year that production took place. For the three EEZs that fall within the China region (China, Macau, and Hong Kong), we combined the values by summing across these EEZs.
 
 #### Units {-} 
  tonnes
@@ -1192,7 +1192,7 @@ Mariculture production is calculated from the FAO Global Aquaculture Production 
 ## Mariculture sustainability score 
 #### [mar_sustainability_score](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/mar_sustainability_score.csv) {-} 
 
-Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations [@2023] contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). These criteria represent the internal mariculture practices with the potential to affect the long term sustainability of the mariculture system. Scores for each assessment criterion were aggregated and averaged. All country average scores were then rescaled from 0 to 1 using the maximum raw Seafood Watch score and minimum of 0, under the assumption that the highest score is the best possible given current technologies.
+Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations [@2023monterey] contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). These criteria represent the internal mariculture practices with the potential to affect the long term sustainability of the mariculture system. Scores for each assessment criterion were aggregated and averaged. All country average scores were then rescaled from 0 to 1 using the maximum raw Seafood Watch score and minimum of 0, under the assumption that the highest score is the best possible given current technologies.
 
 These scores are country and species-specific, however, many country/species combinations are not assessed by Seafood Watch. Given that each mariculture record must have a corresponding sustainability score we used a series of steps to estimate sustainability scores for every country and species. If a country/species match was available we used that, otherwise, we gapfilled using the following sequence:
 1. Used the global species value provided by SeaFood Watch
@@ -1473,7 +1473,7 @@ OHI global region ID and name.
 
 *Subcategory: climate change*
 
-This pressure layer models the difference in global distribution of the aragonite saturation state ($\Omega_{arag}$) of the ocean in the pre-industrial era and modern times. Global estimates through time (Feely et al. 2009) are modeled at 1-degree resolution. Changes in the saturation state can be attributed to changes in the concentration of CO~2~ and thus we use the difference between the pre-industrial and modern times as a proxy for ocean acidification due to human influences. Values are rescaled from 0 to 1 using the threshold at which seawater becomes undersaturated, where $\Omega_{arag} = 1$.
+This pressure layer models the difference in global distribution of the aragonite saturation state ($\Omega_{arag}$) of the ocean in the pre-industrial era and modern times. Global estimates through time [@feely2009ocean] are modeled at 1-degree resolution. Changes in the saturation state can be attributed to changes in the concentration of CO~2~ and thus we use the difference between the pre-industrial and modern times as a proxy for ocean acidification due to human influences. Values are rescaled from 0 to 1 using the threshold at which seawater becomes undersaturated, where $\Omega_{arag} = 1$.
 
 #### Units {-} 
  scaled 0-1
@@ -1505,7 +1505,7 @@ Data is from the United Nations Environment Programme - World Conservation Monit
 
 *Subcategory: pollution*
 
-The percentage of the population with access to improved sanitation facilities [@who-unicef2023] was used in combination with measurements of coastal population as a proxy for pathogens in coastal waters. Access to improved sanitation facilities is defined as the percentage of the population in a country with at least adequate access to disposal facilities that can effectively prevent human, animal, and insect contact with excreta. These data are a country-wide average (not specific to the coastal region). Percentages (0-100) for each country were rescaled to 0-1 based on a maximum target of 100% of the population with access to improved sanitation, and a minimum value of 0.
+The percentage of the population with access to improved sanitation facilities [@who-unicef2024] was used in combination with measurements of coastal population as a proxy for pathogens in coastal waters. Access to improved sanitation facilities is defined as the percentage of the population in a country with at least adequate access to disposal facilities that can effectively prevent human, animal, and insect contact with excreta. These data are a country-wide average (not specific to the coastal region). Percentages (0-100) for each country were rescaled to 0-1 based on a maximum target of 100% of the population with access to improved sanitation, and a minimum value of 0.
 Reference point was defined as the 99th quantile across year/region with no buffer and constrained to the first 10 years of data (vs. all available years of data).
 
 #### Units {-} 
@@ -1580,7 +1580,7 @@ OHI region ids for eez (1-250) and fao high seas regions (260-278).
 ## Relative natural product harvest value 
 #### [np_harvest_product_weight](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/np_harvest_product_weight.csv) {-} 
 
-Within each region and year, the 5 year average value (USD) of harvest of each commodity (ornamental fish, seaweeds, and fish oil/fish meal) relative to 5 year average total harvest value of three marine commodities. This layer is used to weight contribution of each product to final natural product status score. The FAO Global Commodities database was used for this layer [@un-fao2023].
+Within each region and year, the 5 year average value (USD) of harvest of each commodity (ornamental fish, seaweeds, and fish oil/fish meal) relative to 5 year average total harvest value of three marine commodities. This layer is used to weight contribution of each product to final natural product status score. The FAO Global Commodities database was used for this layer [@un-fao2024].
 
 If a country was missing tonnes or dollar values (but had one of the values), the missing data were estimated. FAO provides yearly data for the tonnes and dollar value generated for each natural product, however, countries often provide only one of these variables (and the data provided varies across years). To estimate these missing data, we used country-specific linear models to predict tonnes based on the dollar value of a product (or, vice versa). For the countries that did not have enough data to develop an adequate model, our models included the data for all the countries within a UN geopolitical region. When there was not enough data at the geopolitical region scale, we used all the global data to predict missing values.
 
@@ -1605,7 +1605,7 @@ kable(data) %>%
 ## Relative ornamental natural product harvest tonnes 
 #### [np_orn_tonnes_relative](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/np_orn_tonnes_relative.csv) {-} 
 
-The total tonnes of ornamental fish were determined for each region using export data from the FAO Global Commodities database [@un-fao2023]. For each group the sum of the subcategories was calculated.  For ornamental fish we excluded the subcategory ‘Fish for culture including ova, fingerlings, etc.’ because it is not specific to ornamental fish, and the subcategory ‘Ornamental freshwater fish’ because it is not from marine systems. Following this, within each region, the harvest of ornamental fishing was scaled relative to its maximum value across all years. The tonnes of ornamental fishing is divided by the maximum value observed for the commodity in each region. 
+The total tonnes of ornamental fish were determined for each region using export data from the FAO Global Commodities database [@un-fao2024]. For each group the sum of the subcategories was calculated.  For ornamental fish we excluded the subcategory ‘Fish for culture including ova, fingerlings, etc.’ because it is not specific to ornamental fish, and the subcategory ‘Ornamental freshwater fish’ because it is not from marine systems. Following this, within each region, the harvest of ornamental fishing was scaled relative to its maximum value across all years. The tonnes of ornamental fishing is divided by the maximum value observed for the commodity in each region. 
 
 If a country was missing tonnes or dollar values (but had one of the values), the missing data were estimated. FAO provides yearly data for the tonnes and dollar value generated for each natural product, however, countries often provide only one of these variables (and the data provided vary across years). To estimate these missing data, we used country-specific linear models to predict tonnes based on the dollar value of ornamental fish (or, vice versa). For the countries that did not have enough data to develop an adequate model, our models included the data for all the countries within a UN geopolitical region. When there wasn’t enough data at the geopolitical region scale, we used all the global data to predict missing values.
 
@@ -1664,7 +1664,7 @@ The seaweed sustainability layer is derived from Table 7.3 in `mar_sustainabilit
 ## Seaweed natural product harvest 
 #### [np_seaweed_tonnes](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/np_seaweed_tonnes.csv) {-} 
 
-Seaweed mariculture production from the FAO Global Aquaculture Production Quantity dataset [@unitednations2023a]. Only production classified in the "Marine" and "Brackishwater" environments was included in the analysis (all "Freshwater" production was excluded). All non edible seaweed species produced within a country were summed to give a single production value for each country in each year that production took place. For the three EEZs that fall within the China region (China, Macau, and Hong Kong), we combined the values by summing across these EEZs.
+Seaweed mariculture production from the FAO Global Aquaculture Production Quantity dataset [@unitednations2024a]. Only production classified in the "Marine" and "Brackishwater" environments was included in the analysis (all "Freshwater" production was excluded). All non edible seaweed species produced within a country were summed to give a single production value for each country in each year that production took place. For the three EEZs that fall within the China region (China, Macau, and Hong Kong), we combined the values by summing across these EEZs.
 
 #### Units {-} 
  tonnes
